# colonizer

./: ANALYSIS.md  Cargo.toml  README.md  TODO.md
cdp_client/: Cargo.toml  README.md
cdp_client/src/: lib.rs
dataset/: 000.txt  001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt  029.txt  030.txt  031.txt  032.txt  033.txt  034.txt  035.txt  037.txt  038.txt  039.txt  040.txt  041.txt  042.txt  (+390 more)
games/: game1.html  game2.html  game3.html  game8.html
src/: card_tracker.rs  chat.rs  controller.rs  gui.rs  hand.rs  html_parser.rs  main.rs  main2.rs  resource.rs  state.rs
src/models/: hand.rs  item.rs  mod.rs  resource.rs
