[package]
name = "colonizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
scraper = "0.12.0"
regex = "1.7.1"
cdp_client = { path = "cdp_client" }
egui = "0.20.1"
eframe = "0.20.1"
lazy_static = "1.4.0"